--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ coverage = "^7.3.2"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.0"
 python-dotenv = "^1.0.0"
+django-filter = "^23.3"
 
 
 [build-system]
