--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,8 @@ DATABASES_HOST = ''
 DATABASES_PORT = ''
 
 TIME_ZONE = ''
+
+BOT_API_KEY = ''
+
+CELERY_BROKER_URL = ''
+CELERY_RESULT_BACKEND = ''
