--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.0"
 python-dotenv = "^1.0.0"
 django-filter = "^23.3"
+flake8 = "^6.1.0"
 
 
 [build-system]
