--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,12 @@ BOT_API_KEY = ''
 
 CELERY_BROKER_URL = ''
 CELERY_RESULT_BACKEND = ''
+
+
+PGDATA=
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+
+ENGINE_DB=
