--- a/.env.sample
+++ b/.env.sample
@@ -1,28 +1,21 @@
-CACHE_ENABLED =
-CACHE_LOCATION = ''
+CACHE_ENABLED=
+CACHE_LOCATION=
 
-EMAIL_HOST_USER = ''
-EMAIL_HOST_PASSWORD = ''
-
-DATABASES_ENGINE = ''
-DATABASES_NAME = ''
-DATABASES_USER = ''
-DATABASES_PASSWORD = ''
-DATABASES_HOST = ''
-DATABASES_PORT = ''
-
-TIME_ZONE = ''
-
-BOT_API_KEY = ''
-
-CELERY_BROKER_URL = ''
-CELERY_RESULT_BACKEND = ''
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
 
 
-PGDATA=
 
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+DATABASES_NAME=
+DATABASES_USER=
+DATABASES_PASSWORD=
+DATABASES_HOST=
+DATABASES_PORT=
+TIME_ZONE=
 
-ENGINE_DB=
+
+BOT_API_KEY=
+CHAT_ID=
+
+CELERY_BROKER_URL=
+CELERY_RESULT_BACKEND=
