--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,11 +24,11 @@ services:
   app:
     build: .
     tty: true
-    command: python manage.py migrate && python3 manage.py runserver 0.0.0.0:8000
+    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
-      - '8000:8000'
+      - '8001:8000'
     depends_on:
       db:
         condition: service_healthy
