--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 CACHE_ENABLED=
-CACHE_LOCATION=
+CACHE_LOCATION=redis://redis:6379
 
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
@@ -9,13 +9,13 @@ EMAIL_HOST_PASSWORD=
 DATABASES_NAME=
 DATABASES_USER=
 DATABASES_PASSWORD=
-DATABASES_HOST=
-DATABASES_PORT=
+DATABASES_HOST=db
+DATABASES_PORT=5432
 TIME_ZONE=
 
 
 BOT_API_KEY=
 CHAT_ID=
 
-CELERY_BROKER_URL=
-CELERY_RESULT_BACKEND=
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379
